// SPDX-License-Identifier: Apache-2.0
//
// Copyright Â© 2017 Trust Wallet.

use crate::chains::common::bitcoin::psbt_sign::{BitcoinPsbtSignHelper, Expected};
use tw_coin_registry::coin_type::CoinType;
use tw_encoding::hex::DecodeHex;
use tw_proto::BitcoinV2::Proto;

#[test]
fn test_bitcoin_sign_psbt_thorchain_swap() {
    let private_key = "f00ffbe44c5c2838c13d2778854ac66b75e04eb6054f0241989e223223ad5e55"
        .decode_hex()
        .unwrap();

    let psbt = "70736274ff0100bc0200000001147010db5fbcf619067c1090fec65c131443fbc80fb4aaeebe940e44206098c60000000000ffffffff03409c0000000000001600143a4ca60b4321b354156ba16c2916502c8fab38a50000000000000000426a403d3a474149412e41544f4d3a636f736d6f7331737377797a666d743675396a373437773537753438746778646575393573757a666c6d7175753a303a743a35305e60000000000000160014b139199ec796f36fc42e637f42da8e3e6720aa9d000000000001011f6603010000000000160014b139199ec796f36fc42e637f42da8e3e6720aa9d00000000".decode_hex().unwrap();
    let input = Proto::PsbtSigningInput {
        psbt: psbt.into(),
        private_keys: vec![private_key.into()],
        ..Proto::PsbtSigningInput::default()
    };

    BitcoinPsbtSignHelper::new(&input).coin(CoinType::Bitcoin).sign_psbt(Expected {
        psbt: "70736274ff0100bc0200000001147010db5fbcf619067c1090fec65c131443fbc80fb4aaeebe940e44206098c60000000000ffffffff03409c0000000000001600143a4ca60b4321b354156ba16c2916502c8fab38a50000000000000000426a403d3a474149412e41544f4d3a636f736d6f7331737377797a666d743675396a373437773537753438746778646575393573757a666c6d7175753a303a743a35305e60000000000000160014b139199ec796f36fc42e637f42da8e3e6720aa9d000000000001011f6603010000000000160014b139199ec796f36fc42e637f42da8e3e6720aa9d01086b024730440220415fb09a3fb0ae061d529de4d45dad70a2d0716b292ab4a6010a628c333155bd0220231e8c2ff668930e1e012009ac49eb05bdfd6b1bdfc9abea441306a446d8f3bd01210306d8c664ea8fd2683eebea1d3114d90e0a5429e5783ba49b80ddabce04ff28f300000000",
        encoded: "02000000000101147010db5fbcf619067c1090fec65c131443fbc80fb4aaeebe940e44206098c60000000000ffffffff03409c0000000000001600143a4ca60b4321b354156ba16c2916502c8fab38a50000000000000000426a403d3a474149412e41544f4d3a636f736d6f7331737377797a666d743675396a373437773537753438746778646575393573757a666c6d7175753a303a743a35305e60000000000000160014b139199ec796f36fc42e637f42da8e3e6720aa9d024730440220415fb09a3fb0ae061d529de4d45dad70a2d0716b292ab4a6010a628c333155bd0220231e8c2ff668930e1e012009ac49eb05bdfd6b1bdfc9abea441306a446d8f3bd01210306d8c664ea8fd2683eebea1d3114d90e0a5429e5783ba49b80ddabce04ff28f300000000",
        txid: "b508068c93bfc679863cbb3383c0e7fb5586b78f3ff7685c2a941110878634d0",
        vsize: 216,
        weight: 861,
        fee: 1736,
    });
}
